<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Category_Session_Options">

        <SeekBarPreference
            android:defaultValue="@integer/default_learntThreshold"
            android:max="95"
            app:key="@string/KEY_learntThreshold"
            app:min="0"
            app:showSeekBarValue="true"
            app:singleLineTitle="false"
            app:summary="@string/learntThreshold_summary"
            app:title="@string/learntThreshold_title" />

        <SeekBarPreference
            android:defaultValue="@integer/default_seenThreshold"
            android:max="10"
            app:key="@string/KEY_seenThreshold"
            app:min="1"
            app:showSeekBarValue="true"
            app:singleLineTitle="false"
            app:summary="@string/seenThreshold_summary"
            app:title="@string/seenThreshold_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Category_Speech_Recognition">

        <SwitchPreferenceCompat
            android:defaultValue="@bool/default_auto_capitalize"
            app:key="@string/KEY_auto_capitalize"
            app:singleLineTitle="false"
            app:title="@string/auto_capitalize_title" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/default_auto_full_stops"
            app:key="@string/KEY_auto_full_stop"
            app:singleLineTitle="false"
            app:summaryOff="@string/auto_full_stop_summaryOff"
            app:summaryOn="@string/auto_full_stop_summaryOn"
            app:title="@string/auto_full_stop_title" />

    </PreferenceCategory>

</PreferenceScreen>
