<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainGuidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/mainGuidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/mainGuidelineRight"
        app:layout_constraintTop_toTopOf="@id/mainGuidelineHorizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Sign Up"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/btnHaveAccount_LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/already_a_user_log_in"
            android:textSize="16sp" />

        <!--        <com.google.android.gms.common.SignInButton-->
        <!--            android:id="@+id/btnGoogleSignIn"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="20dp"-->
        <!--            android:layout_marginTop="50dp"-->
        <!--            android:gravity="center_vertical|center"/>-->

        <Button
            android:id="@+id/btnGoogleSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#FF4285f4"
            android:drawableStart="@drawable/ic_google"
            android:padding="15dp"
            android:paddingEnd="40dp"
            android:text="Sign up with Google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="Sign up with email"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/or"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <Button
            android:id="@+id/btnContinueAsGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/defaultRed_100"
            android:padding="18dp"
            android:text="@string/continue_as_guest"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
